# task_scheduler

./: .env  .gitignore  Cargo.toml  README.md  bacon.toml
common/: Cargo.toml
common/src/: db.rs  filter.rs  lib.rs
migrations/: 20240329200146_create_task_status_type.down.sql  20240329200146_create_task_status_type.up.sql  20240329200337_create_task_type.down.sql  20240329200337_create_task_type.up.sql  20240329205413_create_tasks_table.up.sql
scheduler/: Cargo.toml
scheduler/src/: main.rs  types.rs
worker/: Cargo.toml
worker/src/: main.rs
