[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.58"
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "uuid",
] }

[features]
default = ["real_database_tests"]

# When you enable this feature, you have to run tests with only a single job because it modifies the actual
# database. This is only used when developing the actual database queries.
real_database_tests = []
