[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
common = { path = "../common" }
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
tower = "0.4.13"
chrono = { version = "0.4.37", features = ["serde"] }
