[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
common = { path = "../common" }
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.37", features = ["serde"] }
dotenvy = "0.15.7"
